--- a/style.css
+++ b/style.css
@@ -1,31 +1,31 @@
 body {
-    background-color: #222222;
+  background-color: #222222;
 
 }
 
 #name-h {
-    font-family: 'Zeyada';
-    font-weight: bold;
-    font-size: 3rem;
-    color: white;
-    text-align: center;
-    /* margin-right: 36rem; */
-    /* margin-left: -9rem; */
-    text-shadow: 2px 2px 5px black;
+  font-family: 'Zeyada';
+  font-weight: bold;
+  font-size: 3rem;
+  color: white;
+  text-align: center;
+  /* margin-right: 36rem; */
+  /* margin-left: -9rem; */
+  text-shadow: 2px 2px 5px black;
 }
 
 
 #lin {
-    font-weight: bold;
-    color: white;
+  font-weight: bold;
+  color: white;
 }
 
 #lin:hover {
-    background: white;
-    transition: .5s;
-    color: black;
-    border-radius: 3px;
-    box-shadow: 2px 2px 5px white;
+  background: white;
+  transition: .5s;
+  color: black;
+  border-radius: 3px;
+  box-shadow: 2px 2px 5px white;
 
 
 }
@@ -52,10 +52,10 @@ body {
 .nav {
   display: flex;
   background-color: #007bfff2;
- height: 80px !important;
-  align-items:center;
+  height: 80px !important;
+  align-items: center;
   justify-content: space-between;
-  
+
   width: 100%;
   /* height: fit-content; */
   position: fixed;
@@ -66,18 +66,19 @@ body {
   /* box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,inset rgba(172, 138, 16, 0.8) -6px -2px 16px -5px; */
   /* background-color: antiquewhite; */
 }
+
 nav ul {
-  
-  list-style:none;
+
+  list-style: none;
   display: flex;
   column-gap: 3rem;
   align-items: center;
   justify-content: center;
- 
+
 }
 
 nav a {
- 
+
   color: white;
   transition: color var(--transition);
 }
@@ -113,7 +114,7 @@ nav div a .logo:hover {
   width: 100%;
   height: 65px;
   display: flex;
-  list-style:none;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -132,10 +133,10 @@ nav div a .logo:hover {
   border: 1px solid #0022ff;
   border-radius: 5px;
   padding: 7px;
-  color:#fff;
+  color: #fff;
   line-height: 65px;
   font-size: 1.4rem;
-  }
+}
 
 .nav div.main_list ul li a:hover {
   color: #ffff;
@@ -147,7 +148,8 @@ nav div a .logo:hover {
 .navTrigger {
   display: none;
 }
-.container{
+
+.container {
   /* margin-bottom: 50px; */
 }
 
@@ -158,16 +160,14 @@ nav div a .logo:hover {
   transition: all 0.4s ease;
 
 }
-.animate-charcter
-{
-   text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #3d2e74 0%,
-    #3f0c77 29%,
-    #ffb510 67%,
-    #ffb516 100%
-  );
+
+.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg,
+      #3d2e74 0%,
+      #3f0c77 29%,
+      #ffb510 67%,
+      #ffb516 100%);
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -178,7 +178,7 @@ nav div a .logo:hover {
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
   display: inline-block;
-      font-size: 70px;
+  font-size: 70px;
 }
 
 @keyframes textclip {
@@ -202,30 +202,36 @@ nav div a .logo:hover {
     /* margin-right:3rem; */
 
   }
-  .nav{
-    display:block;
-    text-align: center;  
+
+  .nav {
+    display: block;
+    text-align: center;
     background-color: #222121b9;
     height: fit-content;
     justify-items: center;
-}
-.logo{
-  display: flex;
-  justify-content: start;
-  /* margin-bottom: 2rem; */
-} 
+  }
+
+  .logo {
+    display: flex;
+    justify-content: start;
+    /* margin-bottom: 2rem; */
+  }
+
   .nav div.logo {
     margin-left: 15px;
   }
+
   .nav div.main_list {
     width: 100%;
     height: 0px;
     overflow: hidden;
   }
+
   .nav div.show_list {
     height: fit-content;
-    display:none;
+    display: none;
   }
+
   .nav div.main_list ul {
     flex-direction: column;
     width: 100%;
@@ -237,16 +243,19 @@ nav div a .logo:hover {
     /*same background color of navbar*/
     background-position: center top;
   }
+
   .nav div.main_list ul li {
     width: 100%;
     text-align: center;
   }
+
   .nav div.main_list ul li a {
     text-align: center;
     width: 100%;
     font-size: rem;
     padding: 20px;
   }
+
   .nav div.media_button {
     display: block;
   }
@@ -262,7 +271,7 @@ nav div a .logo:hover {
   height: 25px;
   margin: auto;
   position: absolute;
-  right: 30px;  
+  right: 30px;
   top: 0;
   bottom: 0;
 }
@@ -317,7 +326,7 @@ nav div a .logo:hover {
   color: #fff;
 }
 
-  
+
 
 
 h1,
@@ -328,39 +337,55 @@ h5,
 p,
 #title,
 span {
-    color: white;
+  color: white;
 }
 
 #but {
-    background-color: #007bff;
+  background-color: #007bff;
 }
 
 li a {
-    color: white;
+  color: white;
 }
 
 
-header{
+header {
   margin-top: 150px;
 }
 
 #foot {
-    margin-bottom: -3rem;
+  margin-bottom: -3rem;
 }
 
 #time {
-    border: #007bff solid 2px;
-    margin-left: 1rem;
-    padding: 3px;
-    border-radius: 70%;
-    font-size: 10px;
+  border: #007bff solid 2px;
+  margin-left: 1rem;
+  padding: 3px;
+  border-radius: 70%;
+  font-size: 10px;
 }
 
 
 
 .pb-3,
 .py-3 {
-    padding-top: 5rem;
+  padding-top: 5rem;
 
-    padding-bottom: 0rem !important;
+  padding-bottom: 0rem !important;
+}
+
+#about {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+
+#imgabout {
+  margin-top: -5rem;
+  margin-left: 4rem;
+}
+
+#contact {
+  color: #fff !important;
+  margin-top: 7rem;
+  /* background-color: #0277f4; */
 }
