--- a/style.css
+++ b/style.css
@@ -30,8 +30,6 @@ body {
 
 }
 
-
-
 .navbar-custom {
   background-color: #007bff;
   /* height: 70px; */
@@ -147,9 +145,7 @@ nav div a .logo:hover {
 .navTrigger {
   display: none;
 }
-.container{
-  /* margin-bottom: 50px; */
-}
+
 
 .nav {
   padding-top: 20px;
@@ -189,13 +185,66 @@ nav div a .logo:hover {
 
 /* Media qurey section */
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .container {
-    margin-bottom: 20px;
+
+@media screen and  (max-width: 768px) {
+  .navTrigger {
+    display: block;
+  
+
+  }
+  .nav{
+    display:block;
+    text-align: center;  
+    background-color: #222121b9;
+    height: fit-content;
+    justify-items: center;
+}
+.logo{
+  display: flex;
+  justify-content: start;
+  /* margin-bottom: 2rem; */
+} 
+  .nav div.logo {
+    margin-left: 15px;
+  }
+  .nav div.main_list {
+    width: 100%;
+    height: 0px;
+    overflow: hidden;
+  }
+  .nav div.show_list {
+    height: fit-content;
+    display:none;
+  }
+  .nav div.main_list ul {
+    flex-direction: column;
+    width: 100%;
+    height: 23rem;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #201d1d9d;
+    /*same background color of navbar*/
+    background-position: center top;
+  }
+  .nav div.main_list ul li {
+    width: 100%;
+    text-align: center;
+    padding: 0px;
+  }
+  .nav div.main_list ul li a {
+    text-align: center;
+    width: 100%;
+    font-size: rem;
+    padding: 20px;
+  }
+  .nav div.media_button {
+    display: block;
   }
 }
 
-@media screen and (max-width: 850px) {
+
+@media screen and (max-width: 769px) {
   .navTrigger {
     display: block;
     /* margin-top: 1rem; */
@@ -316,8 +365,6 @@ nav div a .logo:hover {
 .signInBtn {
   color: #fff;
 }
-
-  
 
 
 h1,
