--- a/pass.css
+++ b/pass.css
@@ -3,374 +3,391 @@
 }
  */
 
+/* body {
+  background-image: url(`<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00cba9" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>`);
+} */
+
+
+
+/* body {
+  background-image: <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" ><path fill="#00cba9" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z" ></path></svg>;
+} */
+#ptitle {
+  margin: 2rem;
+}
+
 
 .container {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    margin-top: 30px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-top: 30px;
 }
 
 .card {
-    --background: linear-gradient(to left, #4fb946 0%, #4aad78 100%);
-    width: 190px;
-    height: 254px;
-    padding: 5px;
-    border-radius: 1rem;
-    overflow: visible;
-    background: #f7ba2b;
-    background: var(--background);
-    position: relative;
-    z-index: 1;
+  --background: linear-gradient(to left, #4fb946 0%, #4aad78 100%);
+  width: 250px;
+  height: 350px;
+  padding: 5px;
+  border-radius: 1rem;
+  overflow: visible;
+  background: #f7ba2b;
+  background: var(--background);
+  position: relative;
+  z-index: 1;
 }
 
 .card::after {
-    position: absolute;
-    content: "";
-    top: 30px;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    height: 100%;
-    width: 100%;
-    transform: scale(0.8);
-    filter: blur(25px);
-    background: #f7ba2b;
-    background: var(--background);
-    transition: opacity .5s;
+  position: absolute;
+  content: "";
+  top: 30px;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  transform: scale(0.8);
+  filter: blur(25px);
+  background: #f7ba2b;
+  background: var(--background);
+  transition: opacity .5s;
 }
 
 .card-info {
-    --color: #181818;
-    background: var(--color);
-    color: var(--color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-    border-radius: .7rem;
+  --color: #181818;
+  background: var(--color);
+  color: var(--color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  border-radius: .7rem;
 }
 
 .card .title {
-    font-weight: bold;
-    letter-spacing: .1em;
-    justify-content: center;
-    text-align: center;
+  font-weight: bold;
+  letter-spacing: .1em;
+  justify-content: center;
+  text-align: center;
 }
 
 /*Hover*/
 .card:hover::after {
-    opacity: 0;
+  opacity: 0;
 }
 
 
 
 .card .card-info {
-    color: #ffffff;
-    transition: color 1s;
- 
+  color: #ffffff;
+  transition: color 1s;
+
 }
 
 body {
-    background-color:#171717;
-    overflow: hidden;
+  /* background-image: url(https://img.freepik.com/free-photo/vibrant-bright-green-cloud-smoke_23-2148102344.jpg?w=826&t=st=1681207901~exp=1681208501~hmac=dd233eb0bd789b78e3830d6317b67ff699cd8eccc72789c779dc88d686e2ec30); */
+  background-image: url('image/vibrant-bright-green-cloud-smoke.jpg');
+  width: fit-content;
+  height: fit-content;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 h1 {
-    margin-top: 500px;
-    text-align: center;
-    color: #c0c0c0;
-    position: relative;
-    top: 50px;
-    font-family: Arial Narrow, Arial, sans-serif;
-    font-weight: lighter;
-    font-size: 48px;
-    margin: 0;
-    letter-spacing: 20px;
+  margin-top: 500px;
+  text-align: center;
+  color: #000000;
+  position: relative;
+  top: 50px;
+  font-family: Arial Narrow, Arial, sans-serif;
+  font-weight: lighter;
+  font-size: 48px;
+  margin: 0;
+  letter-spacing: 20px;
 }
 
 .fireworks {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: top;
-    justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: top;
+  justify-content: center;
 }
 
 .fireworks .firework {
-    position: relative;
-    top: 0px;
-    left: 0px;
-    margin: 0px 50px;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  margin: 0px 50px;
 }
 
 .fireworks .firework:before {
-    content: "";
-    display: block;
-    border-radius: 5px;
-    background-color: #1aff00;
-    width: 5px;
-    height: 0px;
-    will-change: transform;
-    transform: translateY(1000px);
-    animation: fireworkstart 3s ease-out infinite;
+  content: "";
+  display: block;
+  border-radius: 5px;
+  background-color: #84c87d;
+  width: 5px;
+  height: 0px;
+  will-change: transform;
+  transform: translateY(1000px);
+  animation: fireworkstart 3s ease-out infinite;
 }
 
 .fireworks .firework .explosion {
-    position: absolute;
-    top: 0;
-    width: 5px;
-    height: 20px;
-    opacity: 0;
-    transform-origin: top center;
-    will-change: transform;
-    animation: explosion 0.7s linear 3s infinite;
+  position: absolute;
+  top: 0;
+  width: 5px;
+  height: 20px;
+  opacity: 0;
+  transform-origin: top center;
+  will-change: transform;
+  animation: explosion 0.7s linear 3s infinite;
 }
 
 .fireworks .firework .explosion:nth-child(1) {
-    transform: rotate(0deg);
+  transform: rotate(0deg);
 }
 
 .fireworks .firework .explosion:nth-child(2) {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .fireworks .firework .explosion:nth-child(3) {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .fireworks .firework .explosion:nth-child(4) {
-    transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 
 .fireworks .firework .explosion:nth-child(5) {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .fireworks .firework .explosion:nth-child(6) {
-    transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .fireworks .firework .explosion:nth-child(7) {
-    transform: rotate(135deg);
+  transform: rotate(135deg);
 }
 
 .fireworks .firework .explosion:nth-child(8) {
-    transform: rotate(225deg);
+  transform: rotate(225deg);
 }
 
 .fireworks .firework .explosion .spark {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    will-change: transform;
-    animation: explosion2 0.7s ease-in-out 3s infinite;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  will-change: transform;
+  animation: explosion2 0.7s ease-in-out 3s infinite;
 }
 
 .fireworks .firework .explosion .spark.silver {
-    background-color: #c0c0c0;
+  background-color: #c0c0c0;
 }
 
 .fireworks .firework .explosion .spark.gold {
-    background-color: #20da20;
+  background-color: #64d060;
 }
 
 @keyframes fireworkstart {
-    0% {
-        height: 0px;
-        transform: translateY(1000px);
-    }
+  0% {
+    height: 0px;
+    transform: translateY(1000px);
+  }
 
-    50% {
-        height: 50px;
-    }
+  50% {
+    height: 50px;
+  }
 
-    75% {
-        height: 30px;
-    }
+  75% {
+    height: 30px;
+  }
 
-    100% {
-        height: 0;
-        transform: translateY(0);
-    }
+  100% {
+    height: 0;
+    transform: translateY(0);
+  }
 }
 
 @keyframes explosion {
-    0% {
-        height: 0px;
-        opacity: 0;
-    }
+  0% {
+    height: 0px;
+    opacity: 0;
+  }
 
-    50% {
-        height: 25px;
-        opacity: 1;
-    }
+  50% {
+    height: 25px;
+    opacity: 1;
+  }
 
-    100% {
-        height: 0px;
-        opacity: 0;
-    }
+  100% {
+    height: 0px;
+    opacity: 0;
+  }
 }
 
 @keyframes explosion2 {
-    0% {
-        transform: translateY(0px);
-    }
+  0% {
+    transform: translateY(0px);
+  }
 
-    50% {
-        transform: translateY(5px);
-    }
+  50% {
+    transform: translateY(5px);
+  }
 
-    75% {
-        transform: translateY(50px);
-    }
+  75% {
+    transform: translateY(50px);
+  }
 
-    100% {
-        transform: translateY(70px);
-    }
+  100% {
+    transform: translateY(70px);
+  }
 }
 
 
 
 .btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10rem;
-    height: 3rem;
-    background-size: 300% 300%;
-    backdrop-filter: blur(1rem);
-    border-radius: 5rem;
-    transition: 0.5s;
-    animation: gradient_301 5s ease infinite;
-    border: double 4px transparent;
-    background-image: linear-gradient(#212121, #212121),  linear-gradient(137.48deg, #42e959 10%,#07b113 45%, #ffffff 67%, #aad482 87%);
-    background-origin: border-box;
-    background-clip: content-box, border-box;
-    margin-left: 1.1rem;
-  }
-  
-  #container-stars {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    transition: 0.5s;
-    backdrop-filter: blur(1rem);
-    border-radius: 5rem;
-  }
-  
-  strong {
-    z-index: 2;
-    font-family: "Ink Free";
-    font-size: 12px;
-    letter-spacing: 5px;
-    color: #FFFFFF;
-    /* text-shadow: 0 0 2px white; */
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10rem;
+  height: 3rem;
+  background-size: 300% 300%;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+  transition: 0.5s;
+  animation: gradient_301 5s ease infinite;
+  border: double 4px transparent;
+  background-image: linear-gradient(#212121, #212121), linear-gradient(137.48deg, #42e959 10%, #07b113 45%, #ffffff 67%, #aad482 87%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  margin-left: 3.5rem;
+}
 
-  
-  .circle {
-    width: 100%;
-    height: 30px;
-    filter: blur(2rem);
-    animation: pulse_3011 4s infinite;
-    z-index: -1;
-  }
-  
-  .circle:nth-of-type(1) {
-    background: rgba(18, 156, 46, 0.636);
-  }
-  
-  .circle:nth-of-type(2) {
-    background: rgba(18, 160, 23, 0.704);
-  }
-  
-  .btn:hover #container-stars {
-    z-index: 1;
-    background-color: #212121;
-  }
-  
-  .btn:hover {
-    transform: scale(1.1)
-  }
-  
-  .btn:active {
-    border: double 4px #1a9434;
-    background-origin: border-box;
-    background-clip: content-box, border-box;
-    animation: none;
-  }
-  
-  .btn:active .circle {
-    background: #1c8021;
-  }
-  
-  
-  @keyframes animStar {
-    from {
-      transform: translateY(0);
-    }
-  
-    to {
-      transform: translateY(-135rem);
-    }
-  }
-  
-  @keyframes animStarRotate {
-    from {
-      transform: rotate(360deg);
-    }
-  
-    to {
-      transform: rotate(0);
-    }
-  }
-  
-  @keyframes gradient_301 {
-    0% {
-      background-position: 0% 50%;
-    }
-  
-    50% {
-      background-position: 100% 50%;
-    }
-  
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  
-  @keyframes pulse_3011 {
-    0% {
-      transform: scale(0.75);
-      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-    }
-  
-    70% {
-      transform: scale(1);
-      box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-    }
-  
-    100% {
-      transform: scale(0.75);
-      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    }
-  }
+#container-stars {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transition: 0.5s;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+}
+
+strong {
+  z-index: 2;
+  font-family: "Ink Free";
+  font-size: 12px;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  /* text-shadow: 0 0 2px white; */
+}
 
 
-  .card-button{
 
-    margin-top: 10rem;
+.circle {
+  width: 100%;
+  height: 30px;
+  filter: blur(2rem);
+  animation: pulse_3011 4s infinite;
+  z-index: -1;
+}
+
+.circle:nth-of-type(1) {
+  background: rgba(18, 156, 46, 0.636);
+}
+
+.circle:nth-of-type(2) {
+  background: rgba(18, 160, 23, 0.704);
+}
+
+.btn:hover #container-stars {
+  z-index: 1;
+  background-color: #212121;
+}
+
+.btn:hover {
+  transform: scale(1.1)
+}
+
+.btn:active {
+  border: double 4px #1a9434;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  animation: none;
+}
+
+.btn:active .circle {
+  background: #1c8021;
+}
+
+
+@keyframes animStar {
+  from {
+    transform: translateY(0);
   }
 
-  .card-button .btn{
-    margin-top: 3rem;
+  to {
+    transform: translateY(-135rem);
+  }
+}
+
+@keyframes animStarRotate {
+  from {
+    transform: rotate(360deg);
   }
 
+  to {
+    transform: rotate(0);
+  }
+}
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes pulse_3011 {
+  0% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+
+.card-button {
+
+  margin-top: 10rem;
+}
+
+.card-button .btn {
+  margin-top: 3rem;
+}
